<resources>
    <string name="app_name">ETicket</string>
    <string name="eventName">Event name</string>
    <string name="eventType">Event type</string>
    <string name="eventCity">Event city</string>
    <string name="book">Book</string>
    <string name="eventDate">TBD</string>
    <string name="barcode_reader">QR code reader</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="app_needs_your_camera_permission_in_order_to_scan_qr_code">Need camera permission</string>
    <string name="scanned_qr_code_result">Scan result</string>
    <string name="first_name">Firm name</string>
    <string name="age">Age</string>
    <string name="attendeeTicket">Attendee ticket</string>
    <string name="attendeeName">Name</string>
    <string name="ticketType">Ticket Type</string>
    <string name="ticketPrice">Price</string>
    <string name="attendeeEmail"> Email</string>
    <string name="share_using">Share using</string>
    <string name="attendeeVerified">Attendee verified</string>
    <string name="evens">Events</string>

    <string name="share_ticket">Share ticket</string>
    <string name="book_next"><![CDATA[Book & Next Paymrnt]]></string>
    <string name="anoynmous">Anonymous</string>
    <string name="eventDescription">Event description</string>
    <string name="eventLocationDescription">Event Location description</string>
    <string name="ticketsSold">Tickets are finished</string>
    <string name="attendeeNotVerified">Attendee not verified</string>
    <string name="ticketCount">Ticket count</string>
    <string name="singleTicketPrice">Single ticket price</string>
    <string name="ticketTotalPrice">Tickets price</string>
    <string name="platunim">Platinum</string>
    <string name="vip">VIP</string>
    <string name="allTicketTotalPrice">Ticket total price</string>
    <string name="addTickets">Add Tickets</string>
    <string name="submit_rate">Send rate</string>
    <string name="rate_this_event">Rate this event</string>
    <string name="comment">write comment</string>
    <string name="pay">Pay</string>
</resources>
