<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">






    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/attendeeNameL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/attendeeNameL"
        app:layout_constraintEnd_toStartOf="@id/booking"
        >

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id ="@+id/booking"
        android:layout_width="393dp"
        android:layout_height="43dp"
        android:text="@string/book_next"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/attendeeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attendeeName"
        app:layout_constraintBottom_toBottomOf="@+id/booking"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/attendeeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attendeeEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188"

        tools:layout_editor_absoluteX="-12dp" />


</androidx.constraintlayout.widget.ConstraintLayout>