<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondaryTextColor"
        android:padding="8dp"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/eventIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/eventName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/eventName"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/eventIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/eventType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/eventType"
            app:layout_constraintStart_toEndOf="@+id/eventIcon"
            app:layout_constraintTop_toBottomOf="@+id/eventName" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/eventCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/eventCity"
            android:textColor="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/locationPin"
            app:layout_constraintTop_toBottomOf="@+id/eventType" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/locationPin"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/ic_location_on_black_24dp"
            android:backgroundTint="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="@+id/eventCity"
            app:layout_constraintStart_toEndOf="@+id/eventIcon"
            app:layout_constraintTop_toTopOf="@+id/eventCity" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/isFreeIcon"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/ic_attach_money_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/eventName"
            app:layout_constraintStart_toEndOf="@+id/eventName"
            app:layout_constraintTop_toTopOf="@+id/eventName" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
